--- a/mywork.html
+++ b/mywork.html
@@ -76,6 +76,16 @@
                 </div>
               </div>
             </div>
+            <div class="col">
+              <div class="card text-bg-dark">
+                <img src="/Dine-Diary.avif" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Dine Diary</h5>
+                  <p class="card-text"></p>
+                  <a href="https://dine-diaryfe.herokuapp.com/" class="btn btn-light">View</a>
+                </div>
+              </div>
+            </div>
             </div>
           </div>
         
