--- a/mywork.html
+++ b/mywork.html
@@ -78,7 +78,7 @@
             </div>
             <div class="col">
               <div class="card text-bg-dark">
-                <img src="/Dine-Diary.avif" class="card-img-top" alt="...">
+                <img src="https://i.etsystatic.com/6966611/r/il/246abf/3304962448/il_570xN.3304962448_nk7w.jpg" class="card-img-top" alt="dine-diary">
                 <div class="card-body">
                   <h5 class="card-title">Dine Diary</h5>
                   <p class="card-text"></p>
